--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:Arial, Helvetica, sans-serif
     background-color: white;
     color: black;
-    margin: 0;
-    padding: 0;
 }
 
+
 h1 {
-    font-size: 20em;
+    font-size: 8em;
     color: black;
     margin-top: 0px;
     line-height: 0.8;
@@ -75,5 +74,7 @@ img:hover {
     gap: 10px;
 }
 
-
+.schlehenschwärmer {
+    margin-top: 10px;
+}
 
