--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@ body {
     color: black;
 }
 
+/*Überschriften*/
 
 h1 {
-    font-size: 8em;
+    font-size: 12em;
     font-weight: 10; 
     color: black;
     margin-top: 0px;
@@ -15,9 +16,11 @@ h1 {
 
 h2 {
     font-weight: 1;
-    font-size: 8em;
+    font-size: 3em;
     color: black;
 }
+
+/*Navigation*/
 
 nav ul {
     list-style-type: none;
@@ -42,10 +45,20 @@ img:hover {
     transform: scale(1.05);
 }
 
+/*Home*/
+
+.deckbild {
+    background-image: url(/Dateien/01fb5fe6d4999a955041792dcba70f8a2469837887.jpg);
+    background-size: cover;
+    position: absolute;
+    top: 200%;
+    background-size: cover;
+ }
+
 .introvideo {
     position: absolute; 
-    left: 13%; 
-    top: 75%; 
+    left: 0%; 
+    top: 140%; 
 }
 
 .no-picture-in-picture {
@@ -53,6 +66,56 @@ img:hover {
     object-fit: cover;
 }
 
+.introbilder {
+    position: absolute; 
+    left: 65%; 
+    top: 0%; 
+}
+
+.modedesign {
+    position: absolute; 
+    left: 14%; 
+    top: 49%; 
+}
+
+.und {
+    font-family: Monotype Corsiva; 
+    font-size: 1.5em;
+    position: absolute; 
+    left: 50%; 
+    top: 70%; 
+}
+
+.kommunikationsdesign {
+    position: absolute; 
+    left: 7.5%; 
+    top: 100%; 
+}
+
+.design {
+    position: absolute; 
+    left: 52%; 
+    top: 125%; 
+}
+
+.born {
+    font-family: Monotype Corsiva; 
+    font-size: 1.5em;
+    position: absolute; 
+    left: 52%; 
+    top: 147%; 
+}   
+
+.berlin {
+    font-family: Monotype Corsiva; 
+    font-size: 1.5em;
+    position: absolute; 
+    left: 75%; 
+    top: 155%; 
+}
+
+
+/*Projekte*/
 
 .projekte {
     display: grid;
@@ -80,29 +143,4 @@ img:hover {
     margin-top: 10px;
 }
 
-.modedesign {
-    padding-left: 30%;;
-}
 
-.und {
-    font-family: Monotype Corsiva; 
-    padding-left: 70%;
-    font-size: 1.5em;
-    top: -300px;
-    z-index: 1; 
-}
-
-.kommunikationsdesign {
-    padding-left: 37%; 
-}
-
-.intro {
-    line-height: 400%;
-    z-index: 1; 
-}
-
-.introbilder {
-    position: relative; 
-    top: -800px; 
-    z-index: 1; 
-}
