--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 /*Überschriften*/
 
 h1 {
-    font-size: 12em;
+    font-size: 6em;
     font-weight: 10; 
     color: black;
     margin-top: 0px;
@@ -18,6 +18,14 @@ h2 {
     font-weight: 1;
     font-size: 3em;
     color: black;
+}
+
+h3 {
+    font-size: 1.5em;
+    font-weight: 100; 
+    color: black;
+    margin-top: 0px;
+    line-height: 0.8;   
 }
 
 /*Navigation*/
@@ -57,8 +65,8 @@ img:hover {
 
 .introvideo {
     position: absolute; 
-    left: 0%; 
-    top: 140%; 
+    left: 61%; 
+    top: 300%; 
 }
 
 .no-picture-in-picture {
@@ -68,79 +76,96 @@ img:hover {
 
 .introbilder {
     position: absolute; 
-    left: 65%; 
-    top: 0%; 
+    left: 0%; 
+    top: 300%; 
 }
 
 .modedesign {
     position: absolute; 
-    left: 14%; 
-    top: 49%; 
+    left: 23%; 
+    top: 17%; 
 }
 
 .und {
     font-family: Monotype Corsiva; 
     font-size: 1.5em;
     position: absolute; 
-    left: 50%; 
-    top: 70%; 
+    left: 45%; 
+    top: 22%; 
 }
 
 .kommunikationsdesign {
     position: absolute; 
-    left: 7.5%; 
-    top: 100%; 
+    left: 40%; 
+    top: 37%; 
 }
 
 .design {
     position: absolute; 
-    left: 52%; 
-    top: 125%; 
+    left: 60%; 
+    top: 50%; 
 }
 
 .born {
     font-family: Monotype Corsiva; 
     font-size: 1.5em;
     position: absolute; 
-    left: 52%; 
-    top: 147%; 
+    left: 10%; 
+    top: 65%; 
 }   
 
 .berlin {
     font-family: Monotype Corsiva; 
     font-size: 1.5em;
     position: absolute; 
-    left: 75%; 
-    top: 155%; 
+    left: 13%; 
+    top: 75%; 
 }
 
 
 /*Projekte*/
 
-.projekte {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 50px;
-    padding: 20px;
-
+.projektnachtfallen {
+    position: absolute; 
+    left: 3%; 
+    top: 30%; 
+    line-height: 3;
 }
 
-.projekte img {
-    width: 100%;
-    height: auto;
+.projektsymbiosis {
+    position: absolute; 
+    left: 52%; 
+    top: 30%; 
+    line-height: 3;
 }
 
-.projekt-item {
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: left;
-    gap: 10px;
+.projektschlehenschwärmer {
+    position: absolute; 
+    left: 52%; 
+    top: 118%; 
+    line-height: 3;
 }
 
-.schlehenschwärmer {
-    margin-top: 10px;
+.projektei {
+    position: absolute; 
+    left: 3%; 
+    top: 118%;
+    line-height: 3; 
 }
 
+.fußleiste {
+    position: absolute; 
+    left: 3%; 
+    top: 230%;
+    line-height: 3; 
+}
 
+.fußleiste a {
+    text-decoration: none; 
+    color: black;         
+}
+
+.fußleiste a:hover {
+    font-size: 1.2em;
+    color: #000000; 
+}
